[project]
name = "plone-nutzerhandbuch"
version = "4.3"
description = "Plone-Benutzerhandbuch"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-inline-tabs",
]

dev = [
    "plone-nutzerhandbuch[docs]",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plone-nutzerhandbuch"]
